--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+/ndvi-backend/ndvi-images
+/ndvi-backend/og-images
 
 # dependencies
 /node_modules
